modules/albtargetgroup/main.tf
# ====================
#
# Target Group
#
# ====================

resource "aws_lb_target_group" "tf_alb_tg" {
  name                          = "${var.system}-${var.project}-${var.environment}-${var.resourcetype}-tg"
  target_type                   = var.alb_target_type
  port                          = 80
  protocol                      = "HTTP"
  vpc_id                        = var.vpc_id
  deregistration_delay          = 300
  slow_start                    = 0
  load_balancing_algorithm_type = "round_robin"

  health_check {
    protocol            = "HTTP"
    path                = "/"
    port                = "traffic-port"
    healthy_threshold   = 5
    unhealthy_threshold = 2
    timeout             = 5
    interval            = 30
    matcher             = 200
  }

  lifecycle {
    # ターゲットグループがリスナーとして登録されている場合に、設定変更による再生成が妨げられてしまう現象を回避するための設定
    create_before_destroy = true
    ignore_changes        = [name]
  }

  tags = {
    Name = "${var.system}-${var.project}-${var.environment}-${var.resourcetype}-tg"
  }
}

# ====================
#
# Listener Rule
#
# ====================


resource "aws_lb_listener_rule" "tf_alb_lsnr_rule" {
  listener_arn = var.alb_lsnr_https_arn
  priority     = var.alb_lsnr_rule_priority

  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.tf_alb_tg.arn
  }

  dynamic "condition" {
    for_each = var.has_host_header ? [1] : []
    content {
      host_header {
        values = var.alb_lsnr_rule_host_header_values
      }
    }
  }

  dynamic "condition" {
    for_each = var.has_path_pattern ? [1] : []
    content {
      path_pattern {
        values = var.alb_lsnr_rule_path_pattern_values
      }
    }
  }


  lifecycle {
    # Blue/Greenデプロイメント実行後にリスナールールが変更された後に、Terraformでリソースの設定が上書きされてしまう現象を回避するための設定
    ignore_changes = [action[0].target_group_arn]
  }
}
